Worked more on collapse

--- a/index.html
+++ b/index.html
@@ -209,7 +209,9 @@
                 <div class="row col-lg-10 mx-auto">
                     <!-- 3D assets -->
                     <h4 class="d-none d-lg-block pb-5 mt-3 text-light text-opacity-75">3D assets</h4>
-                    <button class="imgBtn d-flex justify-content-between align-items-center d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#illustrations3D" aria-expanded="false" aria-controls="illustrations3D">3D Assets<i class="fa-solid fa-plus"></i></button>
+                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#illustrations3D" aria-expanded="false" aria-controls="illustrations3D">
+                        3D Assets<i class="fa-solid fa-plus"></i>
+                    </button>
                     <div class="px-0 px-lg-3 pt-4 pt-md-0 container-fluid mb-5 collapse d-md-block" id="illustrations3D">
                         <div class="pictures3Da">
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201901_AC_Ace1959_01_A.jpg" data-caption="1959 AC Ace">
@@ -318,7 +320,7 @@
 
                     <!-- 2D illustrations -->
                     <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75">2D illustrations</h4>
-                    <button class="imgBtn d-flex justify-content-between align-items-center d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#illustrations2D" aria-expanded="false" aria-controls="illustrations2D">2D Illustrations<i class="fa-solid fa-plus"></i></button>
+                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#illustrations2D" aria-expanded="false" aria-controls="illustrations2D">2D Illustrations<i class="fa-solid fa-plus"></i></button>
                     <div class="px-0 px-lg-3 pt-4 pt-md-0 container-fluid picturesTrad mb-5 collapse d-md-block" id="illustrations2D">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
                             <img class="" data-src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
@@ -359,7 +361,7 @@
                     <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75" id="productDesign">Product Design</h4>
 
                     <!-- Boring Box -->
-                    <button class="imgBtn d-flex justify-content-between align-items-center d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productBB" aria-expanded="false" aria-controls="productBB">Boring Box<i class="fa-solid fa-plus"></i></button>
+                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productBB" aria-expanded="false" aria-controls="productBB">Boring Box<i class="fa-solid fa-plus"></i></button>
                     <div class="py-4 mb-5 collapse d-md-block" id="productBB">
                         <div class="align-items-end">
                             <h5 class="playFair text-light text-opacity-75">Boring Box TKL keyboard</h5>
@@ -427,7 +429,7 @@
                     </div>
 
                     <!-- Omron 75 -->
-                    <button class="imgBtn d-flex justify-content-between align-items-center d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productO75" aria-expanded="false" aria-controls="productO75">Omron75<i class="fa-solid fa-plus"></i></button>
+                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productO75" aria-expanded="false" aria-controls="productO75">Omron75<i class="fa-solid fa-plus"></i></button>
                     <div class="py-4 collapse d-md-block" id="productO75">
                         <div class="align-items-end">
                             <h5 class="playFair text-light text-opacity-75">Omron 75 keyboard</h5>
