--- a/index.html
+++ b/index.html
@@ -320,7 +320,9 @@
 
                     <!-- 2D illustrations -->
                     <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75">2D illustrations</h4>
-                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#illustrations2D" aria-expanded="false" aria-controls="illustrations2D">2D Illustrations<i class="fa-solid fa-plus"></i></button>
+                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#illustrations2D" aria-expanded="false" aria-controls="illustrations2D">
+                        2D Illustrations<i class="fa-solid fa-plus"></i>
+                    </button>
                     <div class="px-0 px-lg-3 pt-4 pt-md-0 container-fluid picturesTrad mb-5 collapse d-md-block" id="illustrations2D">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
                             <img class="" data-src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
