--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -210,7 +210,7 @@
                     <!-- 3D assets -->
                     <h4 class="d-none d-lg-block pb-5 mt-3 text-light text-opacity-75">3D assets</h4>
                     <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#illustrations3D" aria-expanded="false" aria-controls="illustrations3D">
-                        3D Assets<i class="fa-solid fa-plus"></i>
+                        <span>3D Assets</span><i class="fa-solid fa-plus"></i>
                     </button>
                     <div class="px-0 px-lg-3 pt-4 pt-md-0 container-fluid mb-5 collapse d-md-block" id="illustrations3D">
                         <div class="pictures3Da">
@@ -321,7 +321,7 @@
                     <!-- 2D illustrations -->
                     <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75">2D illustrations</h4>
                     <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#illustrations2D" aria-expanded="false" aria-controls="illustrations2D">
-                        2D Illustrations<i class="fa-solid fa-plus"></i>
+                        <span>2D Illustrations</span><i class="fa-solid fa-plus"></i>
                     </button>
                     <div class="px-0 px-lg-3 pt-4 pt-md-0 container-fluid picturesTrad mb-5 collapse d-md-block" id="illustrations2D">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
@@ -363,7 +363,9 @@
                     <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75" id="productDesign">Product Design</h4>
 
                     <!-- Boring Box -->
-                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productBB" aria-expanded="false" aria-controls="productBB">Boring Box<i class="fa-solid fa-plus"></i></button>
+                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productBB" aria-expanded="false" aria-controls="productBB">
+                        <span>Boring Box</span><i class="fa-solid fa-plus"></i>
+                    </button>
                     <div class="py-4 mb-5 collapse d-md-block" id="productBB">
                         <div class="align-items-end">
                             <h5 class="playFair text-light text-opacity-75">Boring Box TKL keyboard</h5>
@@ -431,7 +433,9 @@
                     </div>
 
                     <!-- Omron 75 -->
-                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productO75" aria-expanded="false" aria-controls="productO75">Omron75<i class="fa-solid fa-plus"></i></button>
+                    <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productO75" aria-expanded="false" aria-controls="productO75">
+                        <span>Omron 75</span><i class="fa-solid fa-plus"></i>
+                    </button>
                     <div class="py-4 collapse d-md-block" id="productO75">
                         <div class="align-items-end">
                             <h5 class="playFair text-light text-opacity-75">Omron 75 keyboard</h5>
