--- a/CaseStudies/UX_CW.html
+++ b/CaseStudies/UX_CW.html
@@ -69,18 +69,18 @@
                                     <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">UX Case studies</a></li>
-                                            <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
 
                                     <div class="col-md-5 order-0 order-md-1">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#illustrations3D">3D assets</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#illustrations2D">2D illustrations</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#3D">3D assets</a></li>
+                                            <li><a class="dropdown-item" href="../index.html#2D">2D illustrations</a></li>
                                             <li><a class="dropdown-item" href="../index.html#productDesign">Product design</a></li>
                                         </ul>
                                     </div>
