--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -66,7 +66,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
-                                    <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
+                                    <div class="col-md-7">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">UX Case studies</a></li>
                                             <li><a class="dropdown-item" href="#">Virtual Teaching Platform</a></li>
@@ -76,12 +76,12 @@
                                         </ul>
                                     </div>
 
-                                    <div class="col-md-5 order-0 order-md-1">
+                                    <div class="col-md-5 mt-4 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#3D">3D assets</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#2D">2D illustrations</a></li>
-                                            <li><a class="dropdown-item" href="../index.html#productDesign">Product design</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#3D">3D assets</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#2D">2D illustrations</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#productDesign">Product design</a></li>
                                         </ul>
                                     </div>
                                 </div>
