--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
-                                    <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
+                                    <div class="col-md-7">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="#projects">UX Case studies</a></li>
-                                            <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
-                                            <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
-                                            <li><a class="dropdown-item" href="./CaseStudies/UX_CW.html">ChaseWick.com</a></li>
+                                            <li><a class="dropdown-item ms-4 ms-lg-0" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
+                                            <li><a class="dropdown-item ms-4 ms-lg-0" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
+                                            <li><a class="dropdown-item ms-4 ms-lg-0" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item ms-4 ms-lg-0" href="./CaseStudies/UX_CW.html">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
     
-                                    <div class="col-md-5 order-0 order-md-1">
+                                    <div class="col-md-5 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="#illustrations">Illustrations</a></li>
-                                            <li><a class="dropdown-item" href="#3D">3D assets</a></li>
-                                            <li><a class="dropdown-item" href="#2D">2D illustrations</a></li>
-                                            <li><a class="dropdown-item" href="#productDesign">Product design</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="#3D">3D assets</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="#2D">2D illustrations</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="#productDesign">Product design</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -350,6 +350,9 @@
                         </a>
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_04.jpg" data-caption="Psychedelic Bruce Lee">
                             <img src="./assets/img/Illustrations/Others/201502_Traditional_00_04_TN.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_old.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img src="./assets/img/Illustrations/Others/201502_Traditional_old_TN.jpg">
                         </a>
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_old.jpg" data-caption="Psychedelic Bruce Lee">
                             <img src="./assets/img/Illustrations/Others/201502_Traditional_old_TN.jpg">
