fixed out of frame picture gallery

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                                     <div class="col-md-7">
                                         <ul class="list-unstyled">
                                             <li><a class="dropdown-item dropDownCat" href="#projects">UX Case studies</a></li>
-                                            <li><a class="dropdown-item ms-4 ms-lg-0" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
-                                            <li><a class="dropdown-item ms-4 ms-lg-0" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item ms-4 ms-lg-0" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
-                                            <li><a class="dropdown-item ms-4 ms-lg-0" href="./CaseStudies/UX_CW.html">ChaseWick.com</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_CW.html">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
     
@@ -320,7 +320,7 @@
                     <!-- 2D illustrations -->
                     <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75 px-0" id="2D">2D illustrations</h4>
                     <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#assets2D" aria-expanded="false" aria-controls="assets2D">2D Illustrations<span class="iconFA"></span></button>
-                    <div class="px-0 pt-4 pt-md-0 container-fluid picturesTrad mb-5 collapse d-md-block" id="assets2D">
+                    <div class="row px-0 pt-4 pt-md-0 container-fluid picturesTrad mb-5 collapse d-md-block" id="assets2D">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
                             <img src="./assets/img/Illustrations/Others/201710_SFMTA_TN.png">
                         </a>
@@ -350,9 +350,6 @@
                         </a>
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_04.jpg" data-caption="Psychedelic Bruce Lee">
                             <img src="./assets/img/Illustrations/Others/201502_Traditional_00_04_TN.jpg">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_old.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img src="./assets/img/Illustrations/Others/201502_Traditional_old_TN.jpg">
                         </a>
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_old.jpg" data-caption="Psychedelic Bruce Lee">
                             <img src="./assets/img/Illustrations/Others/201502_Traditional_old_TN.jpg">
