--- a/About.html
+++ b/About.html
@@ -129,7 +129,7 @@
                     <h5 class="lato pt-3">Full Sail University</h5>
                     <p class="lato pb-4">Bachelor of Science - Computer Animation</p>
                     <h5 class="lato">University of Central Florida</h5>
-                    <p class="lato pb-4">UX/UI Design Certification</p>
+                    <p class="lato pb-4">Web Development Certification</p>
                     <h5 class="lato">FARO Training</h5>
                     <p class="lato pb-4">Training Certification</p>
                     <h5 class="lato">Photomodeler Technologies</h5>
