--- a/About.html
+++ b/About.html
@@ -108,11 +108,11 @@
         <!-- Biography -->
         <section class="container d-flex aboutMeIntro">
             <div class="row col-md-10 mx-auto">
-                <div class="col-md-5 mb-4 slide-in from-left">
+                <div class="col-md-5 col-lg-6 mb-4 slide-in from-left">
                     <h1>Hello!</h1>
                     <h1>My name is <span style="font-weight: 600;">Leon</span></h1>
                 </div>
-                <div class="col-md-7 ps-3 pt-1 slide-in from-right">
+                <div class="col-md-7 col-lg-6 ps-3 pt-1 slide-in from-right">
                     <h5 class="mb-4 fw-normal">a designer, artist, developer, and behaviorial researcher hoping to further my career in the design space.</h5>
                     <h5 class="mb-4 fw-normal">I'm a designer focused on Product and Brand, with an addiction to animation and visual design. My goal is to create simple, beautiful, and accessible interfaces and interactions.</h5>
                     <h5 class="fw-normal">I am also a gamer, comic maniac, and a computer tech nerd who spends too much time collecting Criterion dvds, old school Kung Fu vhs tapes, and anything Disney related.</h5>
