More style changes

--- a/About.html
+++ b/About.html
@@ -55,20 +55,20 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="fw-semibold nav-link" href="index.html">
-                                HOME
+                            <a class="nav-link" href="index.html">
+                                Home
                             </a>
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="fw-semibold nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            PORTFOLIO
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
                                     <div class="col-md-7">
                                         <ul class="list-unstyled">
-                                            <li><a class="dropdown-item dropDownCat" href="index.html#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item dropDownCat" href="index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
@@ -89,8 +89,8 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="fw-semibold nav-link" href="#">
-                                ABOUT
+                            <a class="nav-link" href="#">
+                                About
                             </a>
                         </li>
                     </ul>
