--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -55,20 +55,20 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="fw-semibold nav-link" href="../index.html#page-top">
-                                HOME
+                            <a class="nav-link" href="../index.html#page-top">
+                                Home
                             </a>
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="fw-semibold nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            PORTFOLIO
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
-                                    <div class="col-md-7">
+                                    <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                         <ul class="list-unstyled">
-                                            <li><a class="dropdown-item dropDownCat" href="../index.html#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item dropDownCat" href="../index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
@@ -89,8 +89,8 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="fw-semibold nav-link" href="../About.html">
-                                ABOUT
+                            <a class="nav-link" href="../About.html">
+                                About
                             </a>
                         </li>
                     </ul>
