--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item dropdown">
-                            <a class="fw-semibold nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              PORTFOLIO
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
                                     <div class="col-md-7">
                                         <ul class="list-unstyled">
-                                            <li><a class="dropdown-item dropDownCat" href="#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item dropDownCat" href="#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
@@ -84,8 +84,8 @@
                           </li>
                         
                         <li class="nav-item">
-                            <a class="fw-semibold nav-link" href="About.html">
-                                ABOUT
+                            <a class="nav-link" href="About.html">
+                                About
                             </a>
                         </li>
                     </ul>
