--- a/CaseStudies/UX_CW.html
+++ b/CaseStudies/UX_CW.html
@@ -55,20 +55,20 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="fw-semibold nav-link" href="../index.html#page-top">
-                                HOME
+                            <a class="nav-link" href="../index.html#page-top">
+                                Home
                             </a>
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="fw-semibold nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            PORTFOLIO
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Portfolio
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <div class="row mainDropdown">
                                     <div class="col-md-7">
                                         <ul class="list-unstyled">
-                                            <li><a class="dropdown-item dropDownCat" href="../index.html#projects">UX Case studies</a></li>
+                                            <li><a class="dropdown-item dropDownCat" href="../index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
                                             <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
@@ -89,8 +89,8 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="fw-semibold nav-link" href="../About.html">
-                                ABOUT
+                            <a class="nav-link" href="../About.html">
+                                About
                             </a>
                         </li>
                     </ul>
@@ -460,10 +460,10 @@
                 </div>
             </div>
 
-            <div class="mb-sm-4 UXCaseSwap justify-content-end">
+            <div class="mb-sm-4 UXCaseSwap">
                 <div class="pt-4 pt-sm-0">
-                    <p>Next:</p>
-                    <a class="hvr-sweep" href="./UX_VTP.html">Virtual Teaching Platform</a>
+                    <p>Previous:</p>
+                    <a class="hvr-sweep" href="./UX_AFA.html">ArtsForAll.com</a>
                 </div>
             </div>
         </section>
